--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,8 @@ configurations {
 
 configurations.all {
     // Aligning log4j dependency versions to 2.17.1
-    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+    resolutionStrategy.eachDependency { //DependencyResolveDetails details ->
+                                                            details ->
         if (details.requested.group == 'org.apache.logging.log4j') {
             details.useVersion '2.17.1'
         }
